--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-aiohttp>=3.5.4,<4.0; python_version>"3.5.3"
+aiohttp>=3.5.4,<4.0; python_version>="3.5.3"
 requests>=2.21.0,<3.0; python_version<"3.5.3"
 typing>=3.6.6,<4.0; python_version<"3.5.3"
