--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 language: python
 cache: pip
+env:
+  - FLAKE8=true
 matrix:
   fast_finish: true
   include:
     - python: "3.4"
+      env:
+        - FLAKE8=
     - python: "3.5"
     - python: "3.6"
     - python: "3.7"
@@ -18,9 +22,7 @@ install: "pip install -r requirements/development.txt"
 before_script:
   - pip install flake8
   # stop the build if there are Python syntax errors or undefined names
-  - flake8 . --count --select=E901,E999,F821,F822,F823 --show-source --statistics
-  # exit-zero treats all errors as warnings.
-  - flake8 . --count --exit-zero --max-complexity=10 --statistics
+  - test -n "$FLAKE8" && flake8 .
 
 # command to run tests
 script: nosetests
