--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ install: "pip install -r requirements/travis.txt"
 
 before_script:
   # stop the build if there are Python syntax errors or undefined names
-  - test -n "$FLAKE8" && flake8 . || true
+  - test -z "$FLAKE8" || flake8 .
 
 # command to run tests
 script: nosetests
